--- a/libs/pyproject.toml
+++ b/libs/pyproject.toml
@@ -7,7 +7,9 @@ authors = ["Alexander Lebedev <lebedev.alex.dev@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 motor = "^3.0.0"
-fastapi = "^0.76.0"
+fastapi = "^0.77.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+msgpack = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 
